# lib-sysfs

./: CMakeLists.txt  README.md
.github/workflows/: main.yml
cmake/: dependencies.cmake  flags.cmake
examples/: CMakeLists.txt
examples/linux/rpi/: CMakeLists.txt
examples/linux/rpi/src/: main.cpp
examples/linux/sysfs/src/: main.cpp
examples/linux/trigger/oneshot/src/: main.cpp
examples/linux/trigger/periodic/src/: main.cpp
inc/sysfs/: factory.hpp  helpers.hpp
inc/sysfs/interfaces/: sysfs.hpp
inc/sysfs/interfaces/linux/: sysfs.hpp
inc/trigger/: factory.hpp
inc/trigger/interfaces/: trigger.hpp
inc/trigger/interfaces/linux/oneshot/: trigger.hpp
inc/trigger/interfaces/linux/periodic/: trigger.hpp
info/: info.txt
src/linux/: sysfs.cpp
src/trigger/linux/oneshot/: trigger.cpp
src/trigger/linux/periodic/: trigger.cpp
tests/: CMakeLists.txt
tests/cmake/: dependencies.cmake
